--- a/Product.html
+++ b/Product.html
@@ -58,10 +58,7 @@
           What is <span><br />TeavoU?</span>
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget
-          leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat
-          cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus.
-          Sed rhoncus nunc ac facilisis. Integer non
+          Welcome to TeavoU, where passion meets perfection in every sip. As a distinguished player in the Food and Beverage industry, we take pride in curating an exceptional range of teas that redefine the art of tea brewing and consumption.
         </p>
       </div>
       <div class="buttons">
