--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         </div>
 
         <div class="home-img">
-          <img src="asset/HomeTea.svg" alt="HomeTea" />
+          <img src="https://iili.io/JIrVu9e.png" alt="HomeTea" />
         </div>
 
         <div class="BgHome">
-          <img src="asset/GreanTea.svg" alt="backgroundHome" />
+          <img src="https://iili.io/JIrVIS9.png" alt="backgroundHome" />
         </div>
 
         <div class="home-GreenTea">
-          <img src="asset/GreenTeaBest.svg" alt="bubukteh" />
+          <img src="https://iili.io/JIr73LF.png" alt="bubukteh" />
         </div>
       </section>
 
@@ -155,9 +155,11 @@
           <button class="tablinks" onclick="openTea(event, 'tea1')">
             <img src="https://iili.io/JIrOTqG.png" alt="tea1" />
           </button>
+
           <button class="tablinks" onclick="openTea(event, 'tea2')">
             <img src="https://iili.io/JIrOu1f.png" alt="tea2" />
           </button>
+
           <button class="tablinks" onclick="openTea(event, 'tea3')">
             <img src="https://iili.io/JIrOzss.png" alt="tea3" />
           </button>
