--- a/Product.html
+++ b/Product.html
@@ -58,7 +58,7 @@
           What is <span><br />TeavoU?</span>
         </h2>
         <p>
-          Welcome to TeavoU, where passion meets perfection in every sip. As a distinguished player in the Food and Beverage industry, we take pride in curating an exceptional range of teas that redefine the art of tea brewing and consumption.
+          Welcome to TeavoU, where passion meets perfection in every sip. As a distinguished player in the Food and Beverage industry, we take pride in curating an exceptional range of teas that redefine the art of tea brewing and consumption. </br></br> TeavoU is a tea company that offers a tea drinking experience made from the best tea. The name teavou is taken from the words “tea for you” which means tea for you itself.
         </p>
       </div>
       <div class="buttons">
