--- a/history.html
+++ b/history.html
@@ -150,5 +150,6 @@
 </footer>
 
       <script src="JS/history.js"></script>
+      <script src="JS/buttonnavbar.js"></script>
   </body>
   </html>
