--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <!-- <script type="module" src="JS/Feedback.js"></script> -->
     <script type="module" src="JS/GetFeed.js"></script>
     <!-- <script type="module" src="JS/JSProduck.js"></script> -->
-    
+    <script src="JS/buttonnavbar.js"></script>
 
   </body>
 </html>
