--- a/quiz.html
+++ b/quiz.html
@@ -50,5 +50,6 @@
       </div>
     </div>
     <script src="JS/quiz.js"></script>
+    <script src="JS/buttonnavbar.js"></script>
   </body>
 </html>
