--- a/Product.html
+++ b/Product.html
@@ -101,65 +101,54 @@
 
     <footer class="footer">
       <div class="footer-left">
-        <div class="credit-cards">
-          <img src="Asset/whiteLogo.svg" alt="" />
-
-          <div class="footer-media">
-            <a href="#" class="instagram"
-              ><img src="Asset/instagram.svg" alt=""
-            /></a>
-            <a href="#" class="twitter"
-              ><img src="Asset/twitter.svg" alt=""
-            /></a>
-            <a href="#" class="facebook"
-              ><img src="Asset/facebook.svg" alt=""
-            /></a>
-            <a href="#" class="youtube"
-              ><img src="Asset/youtube.svg" alt=""
-            /></a>
+          <div class="credit-cards">
+              <img src="https://iili.io/JIr1Hmv.png" alt="whiteLogo">
+  
+              <div class="footer-media">
+                  <a href="#" class="instagram"><img src="https://iili.io/JIr0D11.png" alt="iconinstagram"></a>
+                  <a href="#" class="twitter"><img src="https://iili.io/JIr0y7a.png" alt="icontwitter"></a>
+                  <a href="#" class="facebook"><img src="https://iili.io/JIr0brF.png" alt="iconfb"></a>
+                  <a href="#" class="youtube"><img src="https://iili.io/JIr0pdg.png" alt="iconyoutube"></a>
+  
+              </div>
           </div>
-        </div>
       </div>
-
+  
       <div class="footer-center">
-        <div class="location">
-          <img src="Asset/location.svg" alt="" />
-          <p>
-            <a href="#"><span>Indonesia</span> DKI Jakarta, Jakarta Selatan</a>
-          </p>
-        </div>
-
-        <div class="phone">
-          <img src="Asset/phone.svg" alt="" />
-          <p><a href="#">+62 812-3456-7890</a></p>
-        </div>
-
-        <div class="mail">
-          <img src="Asset/mail.svg" alt="" />
-          <p><a href="#">support@gmail.com</a></p>
-        </div>
+          <div class="location">
+              <img src="https://iili.io/JIrExF1.png" alt="locationicon">
+              <p><a href="#"><span>Indonesia</span> DKI Jakarta, Jakarta Selatan</a></p>
+          </div>
+  
+          <div class="phone">
+              <img src="https://iili.io/JIr19kJ.png" alt="phoneicon">
+              <p><a href="#">+62 812-3456-7890</a></p>
+          </div>
+  
+          <div class="mail">
+              <img src="https://iili.io/JIrEn6P.png" alt="iconemail">
+              <p><a href="#">support@teavou.com</a></p>
+          </div>
       </div>
-
+  
       <div class="footer-right">
-        <p class="footer-about">
-          <span>About</span>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget
-          leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat
-          cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus.
-          Sed rhoncus nunc ac facilisis.
-        </p>
+          <p class="footer-about">
+              <span>About</span>
+              Our specialty lies within the artistry of tea-making. Ensuring every process is taken with a good care, for your brew-tea-ful day!
+          </p>
       </div>
-
+  
       <div class="line"></div>
-
+  
       <div id="copyright">
-        <div class="wrapper">
-          &copy; 2023. <b>TeavoU</b> All Right Reserved.
-        </div>
+          <div class="wrapper">
+              &copy; 2023. <b>TeavoU</b> All Right Reserved.
+          </div>
       </div>
-    </footer>
-
+  </footer>
+  
     <script type="module" src="JS/ProductJS.js"></script>
     <script src="JS/buttonProduct.js"></script>
+    <script src="JS/buttonnavbar.js"></script>
   </body>
 </html>
