minor update product
- ubah file img menjadi link hosting
-

--- a/Product.html
+++ b/Product.html
@@ -35,20 +35,20 @@
         <div class="column">
           <div class="column-1">
             <div class="image-1">
-              <img src="Asset/product img 1.png" alt="" />
+              <img src="https://iili.io/JTjD9gS.png" alt="productimg1" >
             </div>
             <div class="image-2">
-              <img src="Asset/product img 2.png" alt="" />
+              <img src="https://iili.io/JTjtbs4.png" alt="productimg2" >
             </div>
           </div>
         </div>
         <div class="column">
           <div class="column-2">
             <div class="image-3">
-              <img src="Asset/product img 3.png" alt="" />
+              <img src="https://iili.io/JTjtpql.png" alt="productimg3" >
             </div>
             <div class="image-4">
-              <img src="Asset/product img 4.png" alt="" />
+              <img src="https://iili.io/JTjty12.png" alt="productimg4" >
             </div>
           </div>
         </div>
@@ -63,15 +63,15 @@
       </div>
       <div class="buttons">
         <button onclick="topFunction()" id="scroll-up" title="Top">
-          <img src="Asset/image deskripsi teh.svg" alt="" />What is TeavoU?
+          <img src="https://iili.io/JIrDoTF.png" alt="imgdescteh">What is TeavoU?
         </button>
-        <a href="history.html"
-          ><button class="but">
-            <img src="Asset/image sejarah tea.svg" alt="" />History of Tea
+        <a href="history.html">
+          <button class="but">
+            <img src="https://iili.io/JIrDxhg.png" alt="Historytea">History of Tea
           </button></a
         >
         <button onclick="bottomFunction()" id="scroll-down" title="Bottom">
-          <img src="Asset/image khasiat tea.svg" alt="" />TeavoU Product
+          <img src="https://iili.io/JIrDCp1.png" alt="ProductTeaVou">TeavoU Product
         </button>
       </div>
     </section>
