--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
               facilis ex nostrum.
             </p>
             <div class="label-best">Best Seller</div>
+             <div id="imgBest"><img src="asset/originTea.png" alt=""></div>
+           
           </div>
 
           <div class="item2">
@@ -83,7 +85,7 @@
               <span>Tea</span>
             </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
+             <div id="imgBest"><img src="asset/GreanTea.svg" alt=""></div>
             <div class="labe2-best">Best Seller</div>
           </div>
           <div class="item3">
@@ -95,6 +97,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.Pariatur
               quam totam sed facilis ex nostrum.
             </p>
+             <div id="imgBest"><img src="asset/originTea.png" alt=""></div>
             <div class="labe3-best">Best Seller</div>
           </div>
           <div class="dots-best">
