minor update tea info
- hapus fungsi navbar button

--- a/infoTea.html
+++ b/infoTea.html
@@ -4,28 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/teaInfo.css">
+    <link rel="icon" href="https://iili.io/JIrTgwX.png" type="image/x-icon">
     <title>Info Tea</title>
 </head>
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="">
+            <img src="https://iili.io/JIrTgwX.png" alt="logo">
         </a>
-
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">
-            <img src="https://iili.io/JIrR1a4.png" alt="menubtn">
-            </button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="AboutUs.html">AboutUs</a>
-                <a href="Product.html">Product</a>
-            </div>
-        </div>
-
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="AboutUs.html">About Us</a></li>
             <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
