--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.Pariatur
               quam totam sed facilis ex nostrum.
             </p>
-             <div id="imgBest"><img src="asset/originTea.png" alt=""></div>
+             <div id="imgBest"><img src="asset/HomeBlueThai.png" alt=""></div>
             <div class="labe3-best">Best Seller</div>
           </div>
           <div class="dots-best">
